[package]

name = "lithos"
description = "A containerization framework for linux"
license = "MIT"
readme = "README.rst"
keywords = ["linux", "namespaces", "containers"]
homepage = "http://github.com/tailhook/lithos"
version = "0.8.0"
authors = ["paul@colomiets.name"]

[dependencies]
regex = "0.2.1"
rustc-serialize = "0.3"
libc = "0.2.21"
argparse = "0.2.1"
quire = "0.2.1"
fern = "0.3"
time = "0.1"
log = "0.3"
env_logger = "0.4.2"
nix = "0.8.1"
unshare = "0.1.14"
signal = "0.3.2"
syslog = "3.1.0"
scan_dir = "0.3.3"
libmount = "0.1.2"
lazy_static = "0.2.8"


[[bin]]
name = "lithos_tree"
path = "src/bin/lithos_tree.rs"

[[bin]]
name = "lithos_knot"
path = "src/bin/lithos_knot.rs"

[[bin]]
name = "lithos_cmd"
path = "src/bin/lithos_cmd.rs"

[[bin]]
name = "lithos_check"
path = "src/bin/lithos_check.rs"

[[bin]]
name = "lithos_clean"
path = "src/bin/lithos_clean.rs"

[[bin]]
name = "lithos_switch"
path = "src/bin/lithos_switch.rs"

[[bin]]
name = "lithos_ps"
path = "src/bin/lithos_ps.rs"

