[package]

name = "lithos"
description = "A containerization framework for linux"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["linux", "namespaces", "containers"]
homepage = "http://github.com/tailhook/lithos"
version = "0.18.4"
categories = [
    "command-line-utilities",
    "os::unix-apis",
]
authors = ["Paul Colomiets <paul@colomiets.name>"]

[dependencies]
regex = "1.0.0"
libc = "0.2.21"
argparse = "0.2.1"
quire = "0.4.0"
fern = "0.4"
log = "0.3"
env_logger = "0.5.4"
nix = "0.11.0"
unshare = "0.5.0"
signal = "0.6.0"
syslog = "3.1.0"
scan_dir = "0.3.3"
libmount = "0.1.10"
lazy_static = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
matches = "0.1.4"
humantime = "1.1.0"
libcantal = "0.3.0"
ipnetwork = "0.13.0"
serde_str = "0.1.0"
failure = "0.1.0"
blake2 = "0.7.0"
rust-crypto = "0.2.36"
ssh-keys = "0.1.1"
structopt = "0.2.6"
rand = "0.5.0"
base64 = "0.9.0"
sha2 = "0.7.0"

[profile.release]
debug = true
